[project]
name = "smartisan-notes-downloader"
version = "0.1.0"
description = "smartisan-notes-downloader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker<1.8.0",
    "pathvalidate>=3.3.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "selenium-wire>=5.1.0",
    "setuptools<81",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
